src/test/deca/etapeB/invalid/decl_int_negatif.res
./src/test/deca/etapeB/invalid/decl_int_negatif.deca:8:6: type not expected
